Implementação progress bar

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>FrontEpon</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+    <meta charset="utf-8">
+    <title>FrontEpon</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
-<body class="e0e0e0 grey lighten-1">
-  <app-root></app-root>
-  
+
+<body>
+    <app-root>
+        <!-- Show simple splash screen-->
+        <div class="splash">
+            <div class="color-line"></div>
+            <div class="splash-title">
+                <h1>FrontEpon</h1>
+            </div>
+        </div>
+    </app-root>
+
 </body>
+
 </html>
