acrescentando layout flex enquadrando component sign-in

--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,12 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>FrontEpon</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-</head>
-
-<body>
-    <app-root>
-        <!-- Show simple splash screen-->
-        <div class="splash">
-            <div class="color-line"></div>
-            <div class="splash-title">
-                <h1>FrontEpon</h1>
-            </div>
-        </div>
-    </app-root>
-
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <title>FrontEpon</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
